-create drawer component -create fade-view component -create redux auth slice and loginApp function -write loginUser function -add libs:  expo-secure-store, expo-web-browser

--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icons8-rocket-48.png"
     }
   }
 }
